<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">百家修师傅</string>
    <string name="app_name_test">师傅测试</string>
    <string name="service_telephone">010-53170256</string>
    <string name="service_telephone_display">010-53170256</string>
    <string name="service_about_url">http://app.100jiaxiu.com/profile/about_an.html</string>
    <string name="service_protocol_url">http://app.100jiaxiu.com/receive_order.html</string>
    <string name="notify_push_title">推送显示的标题</string>
    <string name="notify_push_content">推送显示的内容</string>
    <string name="common_time_hour">时</string>
    <string name="common_time_minute">分</string>
    <string name="common_time_second">秒</string>
    <string name="common_exit_message">再次按返回键退出</string>
    <string name="common_no_data_message">没有数据哦</string>
    <string name="common_no_more_data_message">没有更多数据啦</string>
    <string name="common_no_network_message">网络状态异常，请在登陆网络后重新打开【百家修】，咨询电话：010-56109590</string>
    <string name="login_mobile_label">手机</string>
    <string name="login_mobile_hint">请输入手机号</string>
    <string name="login_authcode_send">获取验证码</string>
    <string name="login_password_label">验证码</string>
    <string name="login_password_hint">短信验证码</string>
    <string name="login_button_login">登录</string>
    <string name="login_account_warning">请填写手机号或验证码！</string>
    <string name="login_fail_warning">登录失败，请检查验证码是否正确！</string>
    <string name="login_waiting_message">正在登录，请稍候...</string>
    <string name="images_button_register">保存并返回</string>
    <string name="images_upload_waiting_message">正在上传图片，请稍候...</string>
    <string name="main_tab_first_text">首页</string>
    <string name="main_tab_second_text">历史订单</string>
    <string name="main_tab_third_text">通知</string>
    <string name="main_tab_fourth_text">我的</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_load_more">正在加载数据，请稍候...</string>
    <string name="send_msg"> 当您与用户没有取得联系时，请点击 &lt;a href=\&quot;http://www.action.html\&quot;&gt;发送短信&lt;/a&gt; 告知用户</string>
    <string name="bank_subtitle">为提现日，每个提现日只能提现一次。客服电话： &lt;a href=\&quot;http://www.action.html\&quot;&gt;010-5317025&lt;/a&gt;</string>
    <string name="bank_title">提示：\n每个月1至5日、15日至18日为提现日，每个提现日只能提现一次。客服电话：010-5317025</string>
    <string name="ready_tips">到位平台订单--客户已经在到位支付%s元，如有增项报价请让客户在到位进行补差价</string>
    <string name="img_count"><Data><![CDATA[已添加<font color="#ff0000"><b>%1$s</b></font>张照片]]></Data></string>

    <string name="minnum">最少选择一张图片</string>
    <string name="maxnum">最多选择%1$d张图片</string>
    <string name="all_images">所有图片</string>
    <string name="sd_disable">SD卡不可用</string>

    <string name="image">图片</string>
    <string name="takephoto">拍照</string>

    <string name="confirm_format">%1$s(%2$d/%3$d)</string>
    <string name="confirm">确定</string>

    <string name="open_camera_failure">打开相机失败</string>

    <string name="permission_storage_denied">请打开存储空间权限</string>

    <string name="permission_camera_denied">请打开相关权限</string>

</resources>
