<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include layout="@layout/layout_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:layout_height="48dp" >

            <com.bjxapp.worker.controls.XEditText
                android:id="@+id/login_edit_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/login_mobile_hint"
                android:inputType="phone"
                android:paddingLeft="60dp"
                android:singleLine="true"
                android:maxLength="11"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <com.bjxapp.worker.controls.XTextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_mobile"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:text="@string/login_mobile_label"
                android:textColor="#353535"
                android:textSize="16sp" />
        </RelativeLayout>
        
        <View
			android:background="@color/separator_color"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
            
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:layout_height="48dp" >

            <com.bjxapp.worker.controls.XEditText
                android:id="@+id/login_edit_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="图形中的文字"
                android:inputType="text"
                android:paddingLeft="60dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <com.bjxapp.worker.controls.XTextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_verify_code"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:text="图形码"
                android:textColor="#353535"
                android:textSize="16sp" />
            
            <com.bjxapp.worker.controls.XImageView
                android:id="@+id/login_image_verify_code"
                android:layout_width="96dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@color/gray" />
        </RelativeLayout>
        
        <View
			android:background="@color/separator_color"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
            
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="0dp"
            android:layout_height="48dp" >

            <com.bjxapp.worker.controls.XEditText
                android:id="@+id/login_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:inputType="number"
                android:paddingLeft="60dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

            <com.bjxapp.worker.controls.XTextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/login_edit_password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:text="@string/login_password_label"
                android:textColor="#353535"
                android:textSize="16sp" />
            
            <com.bjxapp.worker.controls.XButton
                android:id="@+id/login_button_sendauthcode"
                android:layout_width="96dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/login_authcode_send"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:background="@drawable/button_background_gray"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
			android:background="@color/separator_color"
			android:layout_width="fill_parent"
			android:layout_height="1.0dip" />
                
        <com.bjxapp.worker.controls.XButton
            android:id="@+id/login_button_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background_green"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/login_button_login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>